force-app/main/default/objects/User/fields/Appraisal_Nation_Password__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Nation_Password__c</fullName>
    <description>User&apos;s Appraisal Nation Password used for ordering Appraisal through Salesforce</description>
    <label>Appraisal Nation Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>