force-app/main/default/objects/User/fields/Appraisal_Nation_Username__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Nation_Username__c</fullName>
    <description>User&apos;s Appraisal Nation Username used for ordering Appraisal through Salesforce</description>
    <label>Appraisal Nation Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>