force-app/main/default/objects/User/fields/Approver_Code__c.field-meta.xml
<CustomField>
    <fullName>Approver_Code__c</fullName>
    <description>This is the User&apos;s Code entered into the email body when replying to Term Sheet Approval requests</description>
    <inlineHelpText>This is the User&apos;s Code entered into the email body when replying to Term Sheet Approval requests</inlineHelpText>
    <label>Approver Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>