force-app/main/default/objects/User/fields/Clarocity_Password__c.field-meta.xml
<CustomField>
    <fullName>Clarocity_Password__c</fullName>
    <description>User&apos;s Clarocity Password used for ordering Appraisal through Salesforce</description>
    <label>Clarocity Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>