force-app/main/default/objects/User/fields/Clarocity_Username__c.field-meta.xml
<CustomField>
    <fullName>Clarocity_Username__c</fullName>
    <description>User&apos;s Clarocity Username used for ordering Appraisal through Salesforce</description>
    <label>Clarocity Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>