force-app/main/default/objects/User/fields/Combo_Rental_Portfolio_Docusign_Code__c.field-meta.xml
<CustomField>
    <fullName>Combo_Rental_Portfolio_Docusign_Code__c</fullName>
    <description>This is the Docusign Powerform Code to be used for sending Applications links to Brokers</description>
    <label>Combo Rental Portfolio Docusign Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>