force-app/main/default/objects/User/fields/Copyright_Year__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Year__c</fullName>
    <defaultValue>&quot;2022&quot;</defaultValue>
    <description>Copyright Year to use for merge fields in Lightning Email Templates</description>
    <inlineHelpText>Copyright Year to use for merge fields in Lightning Email Templates</inlineHelpText>
    <label>Copyright Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>