force-app/main/default/objects/User/fields/Create_Operations_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Create_Operations_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Operations Portal User</label>
    <type>Checkbox</type>
</CustomField>