force-app/main/default/objects/User/fields/Department_Role__c.field-meta.xml
<CustomField>
    <fullName>Department_Role__c</fullName>
    <description>Roles within the user&apos;s division</description>
    <label>Department Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Bridge Closer</fullName>
            </value>
            <value>
                <fullName>Bridge Loan Coordinator</fullName>
            </value>
            <value>
                <fullName>Bridge Underwriter</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Loss Mitigation</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Post Closer</fullName>
            </value>
            <value>
                <fullName>Term Closer</fullName>
            </value>
            <value>
                <fullName>Term Loan Coordinator</fullName>
            </value>
            <value>
                <fullName>Term Underwriter</fullName>
            </value>
            <value>
                <fullName>Loan Processor</fullName>
                <isActive>false</isActive>
                <label>Loan Processor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>