force-app/main/default/objects/User/fields/Enable_Doc_Upload_Alert__c.field-meta.xml
<CustomField>
    <fullName>Enable_Doc_Upload_Alert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Doc Upload Alert</label>
    <type>Checkbox</type>
</CustomField>