force-app/main/default/objects/User/fields/Enable_Task_Alert_on_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Enable_Task_Alert_on_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will let the user control if they receive an email alert when a task is due</description>
    <inlineHelpText>This will enable an email alert for any Task that is due that day</inlineHelpText>
    <label>Enable Task Alert on Due Date</label>
    <type>Checkbox</type>
</CustomField>