force-app/main/default/objects/User/fields/For_Lookup_Filters__c.field-meta.xml
<CustomField>
    <fullName>For_Lookup_Filters__c</fullName>
    <description>This is used for filters on Lookup fields</description>
    <inlineHelpText>This is used for filters on Lookup fields</inlineHelpText>
    <label>For Lookup Filters</label>
    <length>200</length>
    <type>Text</type>
</CustomField>