force-app/main/default/objects/User/fields/Is_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Vendor__c</fullName>
    <formula>Contact.Is_Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Vendor</label>
    <type>Checkbox</type>
</CustomField>