force-app/main/default/objects/User/fields/Originating_Company__c.field-meta.xml
<CustomField>
    <fullName>Originating_Company__c</fullName>
    <description>This will identify which Company this employee came from if they were onboarded because of a merger with another Lender</description>
    <inlineHelpText>This will identify which Company this employee came from if they were onboarded because of a merger with another Lender</inlineHelpText>
    <label>Originating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoreVest</fullName>
                <default>true</default>
                <label>CoreVest</label>
            </value>
            <value>
                <fullName>Riverbend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>