force-app/main/default/objects/User/fields/Portal_Comment_Email_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Portal_Comment_Email_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Comment Email Opt-out</label>
    <type>Checkbox</type>
</CustomField>