force-app/main/default/objects/User/fields/Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Portal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>