force-app/main/default/objects/User/fields/Portal_Profile_Pic__c.field-meta.xml
<CustomField>
    <fullName>Portal_Profile_Pic__c</fullName>
    <label>Portal Profile Pic</label>
    <type>Url</type>
</CustomField>