force-app/main/default/objects/User/fields/Rental_Portfolio_Docusign_Code__c.field-meta.xml
<CustomField>
    <fullName>Rental_Portfolio_Docusign_Code__c</fullName>
    <description>This is the Docusign Powerform Code to be used for sending Applications links to Brokers</description>
    <label>Rental Portfolio Docusign Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>