force-app/main/default/objects/User/fields/Scheduled_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Deactivation_Date__c</fullName>
    <description>Date that a user is scheduled to be deactivated.</description>
    <inlineHelpText>This field fires a flow that deactivates the user on 12:15am on the date specified.</inlineHelpText>
    <label>Scheduled Deactivation Date</label>
    <type>Date</type>
</CustomField>