force-app/main/default/objects/User/fields/Single_Bridge_Project_Docusign_Code__c.field-meta.xml
<CustomField>
    <fullName>Single_Bridge_Project_Docusign_Code__c</fullName>
    <description>This is the Docusign Powerform Code to be used for sending Applications links to Brokers</description>
    <label>Single Bridge Project Docusign Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>