force-app/main/default/objects/User/fields/US_RES_Password__c.field-meta.xml
<CustomField>
    <fullName>US_RES_Password__c</fullName>
    <description>User&apos;s US RES Password used for ordering Appraisal through Salesforce</description>
    <inlineHelpText>User&apos;s US RES Password used for ordering Appraisal through Salesforce</inlineHelpText>
    <label>US RES Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>