force-app/main/default/objects/User/fields/US_RES_Username__c.field-meta.xml
<CustomField>
    <fullName>US_RES_Username__c</fullName>
    <description>User&apos;s US RES Username used for ordering Appraisal through Salesforce</description>
    <inlineHelpText>User&apos;s US RES Username used for ordering Appraisal through Salesforce</inlineHelpText>
    <label>US RES Username</label>
    <type>TextArea</type>
</CustomField>