force-app/main/default/objects/User/fields/Valuation_Services_Password__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Services_Password__c</fullName>
    <description>User&apos;s Valuation Services Password used for ordering Appraisal through Salesforce</description>
    <inlineHelpText>User&apos;s Valuation Services Password used for ordering Appraisal through Salesforce</inlineHelpText>
    <label>Valuation Services Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>