force-app/main/default/objects/User/fields/Valuation_Services_Username__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Services_Username__c</fullName>
    <description>User&apos;s Valuation Services Username used for ordering Appraisal through Salesforce</description>
    <inlineHelpText>User&apos;s Valuation Services Username used for ordering Appraisal through Salesforce</inlineHelpText>
    <label>Valuation Services Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>