force-app/main/default/objects/User/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <formula>TEXT(Contact.Account.Non_Borrower_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Type</label>
    <type>Text</type>
</CustomField>