force-app/main/default/objects/User/listViews/Active_Non_Portal.listView-meta.xml
<ListView>
    <fullName>Active_Non_Portal</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Originating_Company__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Portal</value>
    </filters>
    <label>Active Non Portal</label>
</ListView>