force-app/main/default/objects/User/listViews/Active_Users_for_Compliance_Report.listView-meta.xml
<ListView>
    <fullName>Active_Users_for_Compliance_Report</fullName>
    <columns>FULL_NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Portal</value>
    </filters>
    <label>Active Users for Compliance Report</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>