force-app/main/default/objects/User/listViews/Inactive_Non_Portal_Users.listView-meta.xml
<ListView>
    <fullName>Inactive_Non_Portal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>portal</value>
    </filters>
    <label>Inactive Non-Portal Users</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>