force-app/main/default/objects/User/listViews/Originations_DocuSign_Inactive_Users.listView-meta.xml
<ListView>
    <fullName>Originations_DocuSign_Inactive_Users</fullName>
    <booleanFilter>(1 or 2) and 3 and 4 and 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsfs__DSProSFUsername__c</field>
        <operation>equals</operation>
        <value>null</value>
    </filters>
    <filters>
        <field>dsfs__DSProSFUsername__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Portal</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Origination</value>
    </filters>
    <label>Originations DocuSign Inactive Users</label>
</ListView>